[gd_scene load_steps=12 format=2]

[ext_resource path="res://Lexical/Letter/LetterPage.gd" type="Script" id=1]
[ext_resource path="res://Dialog/PlainDialogBackground.png" type="Texture" id=2]
[ext_resource path="res://UI/pressFtoExit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Test/TestSoundPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/fonts/kanit.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 11
extra_spacing_top = -10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 155.99, 96.5065 )
scale = Vector2( 0.24682, 0.576551 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PressFtoExit" parent="." instance=ExtResource( 3 )]

[node name="TestSoundPlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( 44.7509, 55.4282 )
scale = Vector2( 0.3, 0.3 )

[node name="Thai" type="Label" parent="."]
margin_left = 99.6266
margin_top = 31.7942
margin_right = 158.627
margin_bottom = 79.7942
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "จ"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThaiFont2" type="Label" parent="."]
margin_left = 163.928
margin_top = 31.7942
margin_right = 224.928
margin_bottom = 93.7942
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "จ"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="Label" parent="."]
margin_left = 16.073
margin_top = 70.5787
margin_right = 80.073
margin_bottom = 118.579
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "j"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mem" type="Label" parent="."]
margin_left = 23.0891
margin_top = 119.849
margin_right = 166.089
margin_bottom = 161.849
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-ุ is placed under the consonant (>u<nder), and is shorter than the long u sound -ู."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PronunciationLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 17.8782
margin_top = 27.232
margin_right = 81.8782
margin_bottom = 49.232
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "pronunciation"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegularFontLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 104.1
margin_top = 26.592
margin_right = 154.1
margin_bottom = 48.592
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "standard font"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 17.6229
margin_top = 100.071
margin_right = 95.6229
margin_bottom = 122.071
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "How to remember it?"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ModernFontLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 171.1
margin_top = 26.7706
margin_right = 218.1
margin_bottom = 48.7706
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "modern font"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 236.416
margin_top = 26.4213
margin_right = 294.416
margin_bottom = 48.4213
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "consonant class"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class" type="Label" parent="."]
margin_left = 232.0
margin_top = 39.0
margin_right = 296.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "j"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -30.0
margin_right = 22.0
margin_bottom = -10.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OkButton" to="." method="_on_OkButton_pressed"]
